--- a/index.html
+++ b/index.html
@@ -561,11 +561,11 @@
     
     <nav id="mainNav">
       <ul>
-        <li><a href="#" data-section="main">Principal</a></li>
-        <li><a href="#" data-section="addToQueue">Adicionar à Fila</a></li>
-        <li><a href="#" data-section="createReservation">Criar Reserva</a></li>
-        <li><a href="#" data-section="feedbacks">Feedbacks</a></li>
-        <li><a href="#" data-section="teamManagement">Gerenciar Equipe</a></li>
+        <li><a href="#main" data-section="main">Principal</a></li>
+        <li><a href="#addToQueue" data-section="addToQueue">Adicionar à Fila</a></li>
+        <li><a href="#createReservation" data-section="createReservation">Criar Reserva</a></li>
+        <li><a href="#feedbacks" data-section="feedbacks">Feedbacks</a></li>
+        <li><a href="#teamManagement" data-section="teamManagement">Gerenciar Equipe</a></li>
       </ul>
     </nav>
 
